<resources>
    <string name="app_name">Profile</string>
    <string name="address">Ngũ Hành Sơn,Đà Nẵng</string>
    <string name="Masv"><b>Mã sinh viên</b> : 2050531200157</string>
    <string name="sodienthoai"><b>Số DT</b> : 0932548177</string>
    <string name="gmail"><b>Gmail</b> : huydinhvan13@gmail.com</string>
    <string name="github"><b>Github</b> : github.com/dvanhuy</string>
</resources>